needs to be fixed - but download multiple countries

--- a/process_data/data/downlod_mw_2016.ipynb
+++ b/process_data/data/downlod_mw_2016.ipynb
@@ -21,51 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "download = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "candidate_download_locs.txt  consumptions.npy  households.npy  lons.npy\r\n",
-      "cluster.csv\t\t     household.csv     lats.npy        nightlights.npy\r\n"
-     ]
-    }
-   ],
    "source": [
     "!ls output/LSMS/malawi_2016/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('malawi-2016', 'output/LSMS/malawi-2016/candidate_download_locs.txt'),\n",
-       " ('malawi_2016', 'output/LSMS/malawi_2016/candidate_download_locs.txt'),\n",
-       " ('nigeria_2013', 'output/LSMS/nigeria_2013/candidate_download_locs.txt'),\n",
-       " ('tanzania_2011', 'output/LSMS/tanzania_2011/candidate_download_locs.txt'),\n",
-       " ('uganda_2011', 'output/LSMS/uganda_2011/candidate_download_locs.txt')]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "locs = sorted(glob.glob('output/LSMS/*/candidate_download_locs.txt'))\n",
     "locs\n",
@@ -95,20 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(90943, 6), (90943, 6), (67227, 6), (177931, 6), (74033, 6)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_df(country, df_orig):\n",
     "    c_nightlight = np.load('output/LSMS/{}/nightlights.npy'.format(country))\n",
@@ -127,26 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4980042444168325\n",
-      "(90943, 6)\n",
-      "0.5004673256875185\n",
-      "(90943, 6)\n",
-      "0.2560132089785354\n",
-      "(67227, 6)\n",
-      "0.4047861249585514\n",
-      "(177931, 6)\n",
-      "0.5856982696905434\n",
-      "(74033, 6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# most nightlights are 0\n",
     "# let's download images that have nonzero nightlights to induce variety into the model\n",
@@ -157,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,31 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.5017355632691701,\n",
-       " 0.49796,\n",
-       " 0.30389652736264333,\n",
-       " 0.3215225459189358,\n",
-       " 0.35740850059031876]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[(df['nightlight'] < 1).mean() for df in dfs] # still most data is under 1 and small"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,60 +152,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.2641086186540732, 0.6264167650531287, 0.10947461629279812)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(labels==0).mean(), (labels==1).mean(), (labels==2).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(59.30578512396694, 4.340909090909091, 25.380165289256198)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['nightlight'][labels==0].max(), df['nightlight'][labels==1].max(), df['nightlight'][labels==2].max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.41685360094451, 0.28202479338842973, 0.3011216056670602)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's smudge these numbers a little to raise the percentage in class 2\n",
     "# we need the distribution to be somewhat even\n",
@@ -293,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,17 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(25246, 7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we don't need to download repeat images, as that reduces our download size significantly\n",
     "# some images can belong to 2+ clusters\n",
@@ -337,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,29 +231,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>im_lat</th>\n",
+       "      <th>im_lon</th>\n",
+       "      <th>clust_lat</th>\n",
+       "      <th>clust_lon</th>\n",
+       "      <th>nightlight</th>\n",
+       "      <th>consumption</th>\n",
+       "      <th>nightlight_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.616667</td>\n",
+       "      <td>2.924999</td>\n",
+       "      <td>8.654959</td>\n",
+       "      <td>2.969085</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.036260</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.675000</td>\n",
+       "      <td>2.933333</td>\n",
+       "      <td>8.654959</td>\n",
+       "      <td>2.969085</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.036260</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.666667</td>\n",
+       "      <td>2.941666</td>\n",
+       "      <td>8.654959</td>\n",
+       "      <td>2.969085</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.036260</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.650000</td>\n",
+       "      <td>2.941666</td>\n",
+       "      <td>8.654959</td>\n",
+       "      <td>2.969085</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.036260</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.633334</td>\n",
+       "      <td>2.941666</td>\n",
+       "      <td>8.654959</td>\n",
+       "      <td>2.969085</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.036260</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16898</th>\n",
+       "      <td>13.058334</td>\n",
+       "      <td>13.833333</td>\n",
+       "      <td>13.093234</td>\n",
+       "      <td>13.814570</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.792612</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16899</th>\n",
+       "      <td>13.083334</td>\n",
+       "      <td>13.841666</td>\n",
+       "      <td>13.093234</td>\n",
+       "      <td>13.814570</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.792612</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16900</th>\n",
+       "      <td>13.141667</td>\n",
+       "      <td>13.849999</td>\n",
+       "      <td>13.093234</td>\n",
+       "      <td>13.814570</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.792612</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16901</th>\n",
+       "      <td>13.108334</td>\n",
+       "      <td>13.849999</td>\n",
+       "      <td>13.093234</td>\n",
+       "      <td>13.814570</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.792612</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16902</th>\n",
+       "      <td>13.066667</td>\n",
+       "      <td>13.849999</td>\n",
+       "      <td>13.093234</td>\n",
+       "      <td>13.814570</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.792612</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16903 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          im_lat     im_lon  clust_lat  clust_lon  nightlight  consumption  \\\n",
+       "0       8.616667   2.924999   8.654959   2.969085         0.0     2.036260   \n",
+       "1       8.675000   2.933333   8.654959   2.969085         0.0     2.036260   \n",
+       "2       8.666667   2.941666   8.654959   2.969085         0.0     2.036260   \n",
+       "3       8.650000   2.941666   8.654959   2.969085         0.0     2.036260   \n",
+       "4       8.633334   2.941666   8.654959   2.969085         0.0     2.036260   \n",
+       "...          ...        ...        ...        ...         ...          ...   \n",
+       "16898  13.058334  13.833333  13.093234  13.814570         0.0     2.792612   \n",
+       "16899  13.083334  13.841666  13.093234  13.814570         0.0     2.792612   \n",
+       "16900  13.141667  13.849999  13.093234  13.814570         0.0     2.792612   \n",
+       "16901  13.108334  13.849999  13.093234  13.814570         0.0     2.792612   \n",
+       "16902  13.066667  13.849999  13.093234  13.814570         0.0     2.792612   \n",
+       "\n",
+       "       nightlight_bin  \n",
+       "0                   1  \n",
+       "1                   1  \n",
+       "2                   1  \n",
+       "3                   1  \n",
+       "4                   1  \n",
+       "...               ...  \n",
+       "16898               1  \n",
+       "16899               1  \n",
+       "16900               1  \n",
+       "16901               1  \n",
+       "16902               1  \n",
+       "\n",
+       "[16903 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# if the script fails halfway through, you can read this and see what is already downloaded\n",
     "# remove the images already downloaded from this dataframe and then continue downloading\n",
     "\n",
-    "# mw_download = pd.read_csv('mw_2016_download.csv')\n",
-    "# downloaded = os.listdir('ims_malawi_2016/')\n",
+    "############## THIS DOENS'T WORK AND NOT SURE WHY IT IS MISCOUNTING\n",
+    "# run = 'nigeria_2013'\n",
+    "# download = pd.read_csv('output/{}_download.csv'.format(run))\n",
+    "# downloaded = os.listdir('ims_{}/'.format(run))\n",
     "# lats = []\n",
     "# longs = []\n",
     "# for im in downloaded:\n",
+    "# #     print(im)\n",
     "#     im = im[:-4].split('_')\n",
     "#     lats.append(float(im[0]))\n",
     "#     longs.append(float(im[1]))\n",
     "\n",
     "# downloaded = pd.DataFrame.from_dict({'im_lat': lats, 'im_lon': longs})\n",
     "\n",
-    "# a = mw_download.set_index(['im_lat', 'im_lon']).index\n",
+    "# a = download.set_index(['im_lat', 'im_lon']).index\n",
     "# b = downloaded.set_index(['im_lat', 'im_lon']).index\n",
     "\n",
     "# mask = ~a.isin(b)\n",
-    "# mw_download = mw_download.loc[mask].reset_index(drop=True)"
+    "# download = download.loc[mask].reset_index(drop=True)\n",
+    "# df = download; c = run\n",
+    "# df"
    ]
   },
   {
@@ -384,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,24 +495,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([(50704, 7), (50000, 7), (55203, 7), (116673, 7), (33880, 7)],\n",
-       " [(28179, 7), (33580, 7), (46423, 7), (70772, 7), (25246, 7)])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for f,l in fls:\n",
     "    os.makedirs('ims_{}'.format(f), exist_ok=True)\n",
+    "#  Change selection to download\n",
+    "selection =4\n",
+    "c = fls[selection][0]\n",
+    "df = ll_download[selection]\n",
     "[df.shape for df in dfs],[ll.shape for ll in ll_download]"
    ]
   },
@@ -456,21 +517,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uganda_2011\n",
+      "nigeria_2013\n",
       "gathering images for im_lats and im_lons in this selection\n",
-      "100, "
+      "0, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300, 1400, 1500, 1600, 1700, "
      ]
     }
    ],
    "source": [
-    "# Change selection to download\n",
-    "selection =4\n",
-    "f = fls[selection][0]\n",
-    "df = ll_download[selection]\n",
-    "print(f)\n",
+    "print(c)\n",
     "print('gathering images for im_lats and im_lons in this selection')\n",
-    "download = True\n",
-    "if download:\n",
+    "\n",
+    "if True:\n",
     "    im_names = []\n",
     "    zoom = 16\n",
     "    for i, r in df.iterrows():\n",
@@ -488,7 +545,7 @@
     "            print(i, end=', ')\n",
     "\n",
     "    df['images'] = im_names\n",
-    "    df.to_csv('output/{}_download_info.csv'.format(f), index=False)"
+    "#     df.to_csv('output/{}_download_info.csv'.format(c), index=False)"
    ]
   }
  ],
